<resources>
    <string name="app_name">迈界商户</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="loading">正在努力加载..</string>
    <string name="empty">暂时没有数据</string>
    <string name="fail">数据获取失败，下拉刷新试试哦</string>
    <string name="hint_search">搜索您的门店</string>
    <string name="tab_inquiry">抢单</string>
    <string name="tab_bid">竞价</string>
    <string name="tab_customer">客户</string>
    <string name="tab_ranking">排行榜</string>
    <string name="tab_mine">我</string>
    <string name="inquiry">今日询价</string>
    <string name="customer">客户</string>
    <string name="mine">我的</string>
    <string name="btn_sure">确定</string>
    <string name="cancle">取消</string>
    <string name="do_not_have_sdcard">您的设备中没有存储卡</string>
    <string name="chose_dealer">选择经销商</string>
    <string name="bid">竞价</string>
    <string name="bid_history">历史竞价</string>
    <string name="login_tip">登录即同意并接受</string>
    <string name="protocol_name">《商家使用协议》</string>
    <string name="customer_service_phone">客服中心：400&#8211;996&#8211;1555</string>
    <string name="login">登录</string>
    <string name="logout">退出账号</string>
    <string name="register">注册</string>
    <string name="noid_register">还没有账号，点击注册</string>
    <string name="haveid_2login">已有账号，重新登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_phonenum">输入手机号</string>
    <string name="password">密码</string>
    <string name="network_unavailable">当前网络不可用，请检查</string>
    <string name="input_passwd">输入6&#8211;12位数字组成的密码</string>
    <string name="input_verify">输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="verity_next_step">下一步</string>
    <string name="register_submit">申请开通账号</string>
    <string name="u_city">地区</string>
    <string name="huhehaote">呼和浩特市</string>
    <string name="brand">品牌</string>
    <string name="dealer">经销商</string>
    <string name="input_user_name">输入姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_pic">头像</string>
     <string name="user_business_card">名片照片</string>
     <string name="user_identity_card">身份证正面照片</string>
    <string name="your_job">您的职位</string>
    <string name="car_gift">礼包赠送</string>
    <string name="sales_consultant">销售顾问</string>
    <string name="telephone_consultant">电话顾问</string>
    <string name="hall_manager">展厅经理</string>
    <string name="sales_manager">销售经理</string>
    <string name="market_manager">市场经理</string>
    <string name="verify_time_update">%s秒</string>
    <string name="verify_send_notice">验证码已发送，请注意查收</string>
    <string name="take_pic">拍照</string>
    <string name="chose_pic">上传照片</string>
    <string name="bug_feed_back">问题反馈</string>
    <string name="share_to_friend">推荐好友</string>
    <string name="feed_back">问题反馈</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">版本更新</string>
    <string name="service_num">400&#8211;996&#8211;1555</string>
    <string name="customer_service_center">客服中心</string>
    <string name="company">SH朗信文化</string>
    <string name="feed_back_content_hint">请留下您的宝贵意见</string>
    <string name="sys_msg">系统消息</string>
    <string name="user_detail">个人信息</string>
    <string name="feed_back_detail">查看</string>
    <string name="bidding_title">正在竞价</string>
    <string name="empty_msg">没有获取到数据，下拉刷新试试</string>
    <string name="grab_deal_suc">运气真好 去买彩票喽</string>
    <string name="grab_deal_fail">囧！下次掏手机要快</string>
    <string name="bidding_detail">竞价详情</string>
    <string name="bidding_history">历史竞价</string>
    <string name="clear_history">清空</string>
    <string name="car_style">款</string>
    <string name="didnot_focus">未被关注</string>
    <string name="goon_bidding">继续竞价</string>
    <string name="sure_bidding">确认竞价</string>
	<string name="QR_Code">扫二维码添加客户</string>
	<string name="bg1">背景1</string>
	<string name="bg2">背景2</string>
	<string name="wan">万</string>
	<string name="about_icon">关于图片描述</string>
	<string name="QR_camera_tips">将二维码放入框内，即可自动扫描</string>
	<string name="dada_small_housekeeper">嗒嗒小管家</string>
	<string name="no_dealer">请先在Boss端添加经销商信息</string>
	   <string name="hello">Hello World, JPush!</string>
	   <string name="example_store">上海香格里拉大酒店（浦东店）</string>
	   <string name="example_blackgold">黑金级</string>
	   <string name="reward_person_num">打赏总人数：   </string>
	   <string name="focus_person_num">关注总人数：   </string>
	   <string name="date">日期 </string>
	   <string name="reward_counts">打赏数</string>
	   <string name="reward_conclusion">打赏总数</string>
	   <string name="add_focus_counts">增加的关注数</string>
	   <string name="delete_focus_counts">取消关注数</string>
	   <string name="all_fans_counts">总粉丝数</string>
	   <string name="efficient_fans">有效粉丝</string>
	   <string name="incharge_sum">兑换金额</string>
	   <string name="state">状态</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="str_orange">#fe7b27</string>
    <string name="basic_action_1">删除</string>
    <string name="add">添加</string>
    <string name="basic_action_2">Action_2</string>
    <string name="home">首页</string>
    <string name="capital_plan">店长计划</string>
    <string name="secretary">私人秘书</string>
    <string name="found">发现</string>
    <string name="content_is_loading">内容正在加载...</string>
    <string name="shopping_carnival">购物狂欢</string>
    <string name="travel_holiday">旅游度假</string>
    <string name="dining">美食餐饮</string>
    <string name="courtesy_car">汽车礼遇</string>
    <string name="life_service">生活服务</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="integral">积分兑换</string>
    <string name="investment">投资理财</string>
    <string name="please_enter_search_brand">请输入感兴趣的品牌</string>
    <string name="home_hot_v16">热门活动推荐</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="all_clear">全部清除</string>
    <string name="no_data">没有数据</string>
    <string name="lv_empty">没有找到合适的吗？</string>
    <string name="found_secretary">要不要找一下小秘书  ></string>
    <string name="activity_detail">活动优惠详情</string>
    <string name="test">这是Try和Catch的测试界面:在这里我会等待ANR异常或除数为0错误，异常被抓时，会弹出Dialog询问处理方法，希望你能看到对话框！</string>
    <string name="shop_infor">门店信息</string>
    <string name="join_activity_shop">参与此活动的分店</string>
    <string name="mai_comment">迈友评论</string>
    <string name="i_report">活动不靠谱，我要举报</string>
    <string name="store_detail">门店详情</string>
    <string name="hdpz">活动品质</string>
    <string name="mai_fs">迈友粉丝数：</string>
    <string name="store_activity_number">当前门店活动</string>
    <string name="look_mine_yhq">查看我的全部优惠券</string>
    <string name="all_clear_tip">您确定要全部清除吗？</string>
    <string name="money_icon">¥ </string>
    <string name="yhq_money">适用优惠券金额</string>
    <string name="gz_sucess">关注成功</string>
    <string name="gz_qx_sucess_content">取消关注成功</string>
    <string name="gz_qx_faild_content">取消关注失败</string>
    <string name="sc_sucess">收藏成功</string>
    <string name="sc_sucess_cancle">取消收藏成功</string>
    <string name="sc_sucess_content_cancle">您已经成功取消收藏</string>
    <string name="gz_sucess_title">关注成功</string>
    <string name="gz_sucess_content">您可在“发现/门店关注”中查看\n还可自行设置门店的活动推送功能</string>
    <string name="gz_faild_content">关注失败，请稍后尝试\n</string>
    <string name="sc_sucess_content">您可在“发现/活动收藏”中查看\n</string>
    <string name="all_stroes">查看所有分店</string>
    <string name="check_all">查看所有分店</string>
    <string name="all_join_stroes">参与此活动的分店</string>
    <string name="mai_communicate">迈友沟通 （%1$s）</string>
    <string name="wx_friend">微信好友</string>
    <string name="friend_c">朋友圈</string>
    <string name="qq_friend">QQ好友</string>
    <string name="tx_wb">腾讯微博</string>
    <string name="xl_wb">新浪微博</string>
    <string name="tele_address">地址：%1$s</string>
    <string name="images_count">共%1$s张</string>
    <string name="tele_address2">办公地址：%1$s</string>
    <string name="telephone"><Data><![CDATA[<font color="#6F6F6F">联系电话： </font>%1$s]]></Data></string>
    <string name="telephone2"><Data><![CDATA[<font color="#6F6F6F">电话: </font>%1$s]]></Data></string>
    <string name="reply_green"><Data><![CDATA[<font color="#9DC14F"> 回复 </font>]]></Data></string>
    <string name="all_store">查看所有分店</string>
    <string name="xy_card">信用卡</string>
    <string name="yhq">优惠券</string>
    <string name="message_center">消息中心</string>
    <string name="mine_secretary">我的私人秘书</string>
    <string name="mine_history">最近浏览</string>
    <string name="mine_comments">我的评论</string>
    <string name="about">服务中心</string>
    <string name="has_chose">选中</string>
    <string name="shared_app">分享APP</string>
    <string name="click_register_login">点击注册/登陆</string>
    <string name="dai_use">待使用</string>
    <string name="used">已使用</string>
    <string name="failure">已失效</string>
    <string name="coupon_money">¥</string>
    <string name="shengyu_day_num">剩余<Data><![CDATA[<font color="#FAD30F">%1$s</font>]]></Data>天</string>
    <string name="enter_phone">输入手机号</string>
    <string name="enter_re_code">输入验证码</string>
    <string name="enter_pwd">设置密码</string>
    <string name="send_recode">获取验证码</string>
    <string name="person_info">个人信息</string>
    <string name="mine_head">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_reset_pwd">重置登录密码</string>
    <string name="mine_edit_person_info">完善个人信息</string>
    <string name="mine_qr_code">我的二维码</string>
    <string name="edit">编辑</string>
    <string name="activity">活动</string>
    <string name="maijie">迈界</string>
    <string name="all">全部</string>
    <string name="setting">设置</string>
    <string name="setting_clear_cache">清空缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="help_center">迈界攻略</string>
    <string name="tel">拨打</string>
    <string name="btn_photo_take">照相机</string>
    <string name="btn_photo_select">相册</string>
    <string name="save">保存</string>
    <string name="nickname_tip">好名字可以让你的朋友更容易记住你。</string>
    <string name="edit_nick_name">更改昵称</string>
    <string name="commit">提交</string>
    <string name="reset_pwd">重置登录密码</string>
    <string name="new_pwd">新密码 ：</string>
    <string name="re_new_pwd">确认新密码 ：</string>
    <string name="confirm">确认</string>
    <string name="goback2homepage">返回首页</string>
    <string name="take_and_save">确认保存</string>
    <string name="chargeman">负责人：   </string>
    <string name="idcard">身份证号：   </string>
    <string name="pnone_num">手机号：   </string>
    <string name="store_degree">门店职位：   </string>
    <string name="please_chargeman">请输入商户负责人姓名   </string>
    <string name="please_idcard">请输入负责人的身份证号码   </string>
    <string name="please_pnone_num">13666666666   </string>
    <string name="please_store_degree">请输入您的职位   </string>
    <string name="audit_state_title_activity">已进入审核阶段耐心等待</string>
    <string name="audit_state_content1_activity">审核会在3工作日内完成</string>
    <string name="audit_state_content2_activity">你可以在我的活动中查询</string>
</resources>