<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/app_bg">
    
     <!-- 公共头部  -->
    <include 
        android:id="@+id/header"
        layout="@layout/header"/>
    
    <!-- 第1条 -->
    <RelativeLayout
       android:id="@+id/rl_1"
       android:layout_below="@id/header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:background="@color/white"
       android:paddingLeft="5dp"
       android:paddingRight="5dp"
       android:paddingTop="15dp"
       android:paddingBottom="15dp">
        
        <TextView
            android:id="@+id/tv_chargeman" 
             android:layout_marginLeft="10dp"
             android:layout_width="@dimen/btn_w_255"
             android:layout_height="wrap_content"
             android:text="@string/chargeman"
             android:textSize="16sp"
             android:layout_centerVertical="true"/>
          <EditText
             android:id="@+id/et_pelase_claim_store"
             android:layout_marginLeft="10dp" 
             android:layout_marginRight="10dp"
             android:background="@null"
             android:layout_toRightOf="@id/tv_chargeman"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/please_chargeman"
             android:textSize="12sp"
             android:textColor="@color/text_nomal"
             android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View 
        android:id="@+id/line_1"
       android:background="@color/text_nomal"
       android:layout_below="@id/rl_1"
       android:layout_height="1px"
       android:layout_width="match_parent"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"/>
    
    
    
     <!-- 第2条 -->
    <RelativeLayout
       android:layout_below="@id/line_1"
       android:id="@+id/rl_2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:background="@color/white"
       android:paddingLeft="5dp"
       android:paddingRight="5dp"
       android:paddingTop="15dp"
       android:paddingBottom="15dp">
        
        <TextView
             android:id="@+id/tv_idcard" 
             android:layout_marginLeft="10dp"
             android:layout_width="@dimen/btn_w_255"
             android:layout_height="wrap_content"
             android:text="@string/idcard"
             android:textSize="16sp"
             android:layout_centerVertical="true"/>
          <EditText
             android:layout_marginLeft="10dp" 
             android:layout_marginRight="10dp"
             android:background="@null"
             android:id="@+id/et_idcard"
             android:layout_toRightOf="@id/tv_idcard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/please_idcard"
             android:textSize="12sp"
             android:textColor="@color/text_nomal"
             android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View 
       android:id="@+id/line_2"
       android:background="@color/text_nomal"
       android:layout_below="@id/rl_2"
       android:layout_height="1px"
       android:layout_width="match_parent"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"/>
    
    
     <!-- 第3条 -->
    <RelativeLayout
       android:layout_below="@id/line_2"
       android:id="@+id/rl_3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:background="@color/white"
       android:paddingLeft="5dp"
       android:paddingRight="5dp"
       android:paddingTop="15dp"
       android:paddingBottom="15dp">

        <TextView
             android:id="@+id/tv_pnone_num" 
             android:layout_marginLeft="10dp"
             android:layout_width="@dimen/btn_w_255"
             android:layout_height="wrap_content"
             android:text="@string/pnone_num"
             android:textSize="16sp"
             android:layout_centerVertical="true"/>
          <EditText
             android:layout_marginLeft="10dp" 
             android:layout_marginRight="10dp"
             android:background="@null"
             android:id="@+id/et_phone_num"
             android:layout_toRightOf="@id/tv_pnone_num"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/please_pnone_num"
             android:textSize="12sp"
             android:textColor="@color/text_nomal"
             android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View 
       android:id="@+id/line_3"
       android:background="@color/text_nomal"
       android:layout_below="@id/rl_3"
       android:layout_height="1px"
       android:layout_width="match_parent"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"/>

     <!-- 第4条 -->
    <RelativeLayout
       android:layout_below="@id/line_3"
       android:id="@+id/rl_4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:background="@color/white"
       android:paddingLeft="5dp"
       android:paddingRight="5dp"
       android:paddingTop="15dp"
       android:paddingBottom="15dp">

       <TextView
             android:id="@+id/tv_store_degree" 
             android:layout_marginLeft="10dp"
             android:layout_width="@dimen/btn_w_255"
             android:layout_height="wrap_content"
             android:text="@string/store_degree"
             android:textSize="16sp"
             android:layout_centerVertical="true"/>
          <EditText
             android:layout_marginLeft="10dp" 
             android:layout_marginRight="10dp"
             android:background="@null"
             android:id="@+id/et_store_degree"
             android:layout_toRightOf="@id/tv_store_degree"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/please_store_degree"
             android:textSize="12sp"
             android:textColor="@color/text_nomal"
             android:layout_centerVertical="true"
            />
    </RelativeLayout>
   
    
     <Button
           android:id="@+id/btn_save_userinfo"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="10dp"
           android:layout_centerInParent="true"
           style="@style/w_wrap_h_wrap"
           android:layout_width="match_parent"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           android:background="@drawable/button"
           android:text="@string/take_and_save"
           android:textColor="@color/app_white"
           android:gravity="center"/>

</RelativeLayout>
