<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:gravity="bottom"
    android:orientation="vertical" >
    


    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000"
        android:background="@null"
        android:text="@string/btn_photo_take"
        android:textSize="16sp" />
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <Button
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000"
        android:text="@string/btn_photo_select"
        android:textSize="16sp" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_white" >
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <Button
        android:id="@+id/give_up"
        android:text="@string/cancle"
        android:background="@null"
        android:layout_gravity="center_horizontal"
		style="@style/text_style_nomal_30"
        />
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

</LinearLayout>